assets/scss/custom.scss
// logo
.navbar-brand {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #fff;
  border-radius: 10px;
  box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.3);
}

.navbar-brand img {
  max-height: 44px;
}

@media (max-width: 1024px) {
  .navbar-brand img {
    max-height: 30px;
  }
}

// footer
footer {
  background-color: #1D87BB;
  margin: 0;
  padding: 2rem 0 1rem 0;
}

footer a {
  color: #FFF;
}

footer a:hover {
  color: #FFF;
}

footer ul {
  padding-left: 0;
}

footer li {
  line-height: 1.42857143;
  position: relative;
  display: block;
  color: #FFF;
}

.project-tab {
}

.project-tab #tabs {
  background: #007b5e;
  color: #eee;
}

.project-tab #tabs h6.section-title {
  color: #eee;
}

.project-tab #tabs .nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  color: #0062cc;
  background-color: #ddd;
  border-color: transparent transparent #f3f3f3;
  //border-bottom: 1px solid !important;
  font-size: 1em;
  font-weight: bold;
}

.project-tab .nav-link {
  border: 1px solid transparent;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  color: #0062cc;
  font-size: 1em;
  font-weight: 600;
}

.project-tab .nav-link:hover {
  border: none;
}

.project-tab thead {
  background: #f3f3f3;
  color: #333;
}

.project-tab a {
  text-decoration: none;
  color: #333;
  font-weight: 600;
}

.highlight pre {
  /* Avoid pushing up the copy buttons. */
  margin: 0;
}

#parser-commands {
  background-color: white;
}

.parser-po-row {
  background-color: lavender !important;
}

.keyple-adopters > li {
  display: inline-block;
  padding-right: 5px;
  padding-left: 5px;
  vertical-align: middle;
}

.keyple-adopters > li img {
  max-height: 95px;
  padding: 10px;
  min-width: 170px;
  max-width: 170px;
}

div.eclipsefdn-adopters {
  background-color: white;
}

a, h3.article-title a:hover {
  transition-property: none !important;
}

// Increase wrapper max width for standard pages
.universal-wrapper {
  width: 1200px;
}

// Increase article container width (all not book pages)
.article-container {
  max-width: 1200px;
}

// Increase docs article max width
.docs-article-container {
  max-width: 100%;
}

// increase left padding for left side menu
// decrease font size
.docs-sidebar .nav > li > a {
  padding: .2rem 1rem .2rem 1.8rem;
  font-size: 0.8rem;
  line-height: 0.9rem;
}

// color of left and right TOCs links
.docs-sidebar .nav > li > a:hover, a.docs-toc-link:hover {
  color:#1D87BB;
}

// all links
a:hover {
  text-decoration: none;
  font-weight: bold;
}

// decrease font size for left side menu titles
.docs-toc-link {
  font-size: 0.8rem;
  padding: 0 1rem;
}

// color of right TOC, padding and margin
#TableOfContents li a, .toc-top li a {
  color: rgba(0,0,0,.65);
  padding: 0.2rem 1rem;
  font-size: .7rem;
  line-height: .9rem;
}
#TableOfContents li {
  margin-bottom: 0;
}

// increase left side menu max width
.docs-sidebar {
  flex: 0 1 400px;
}

// improve code boxing
code {
  font-size: 1rem !important;
  font-family: monospace;
  border-radius: 3px;
  padding: .2em .4em;
  background-color: #f8f8f8;
}

// Increase code font size and style
pre code {
  font-size: .8rem !important;
  font-family: monospace;
  white-space: pre-wrap !important;
  background-color: inherit;
}

table code {
  font-size: .8rem !important;
}

// Color of tabpane headers
.project-tab #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
  color: inherit;
}

// Component Metadata positioning
.component-metadata {
  padding-left: 2rem;
}

// Hide the next/previous links on articles
.article-widget {
  display: none;
}

// Container of button "Copy to clipboard"
.bd-clipboard {
  display: block;
  position: relative;
  float: right;
}
.btn-clipboard {
  position: absolute;
  top: .25rem;
  right: .25rem;
  width: 4rem;
}

// Dependency check tool
.bg-yellow {
  background: #FEFECE;
}
.bg-red {
  background: #FDEDEC;
}
.bg-purple {
  background: #F4ECF7;
}
.bg-violet {
   background: #EDE7F6;
 }
.bg-blue {
  background: #EBF5FB;
}
.bg-green {
  background: #E9F7EF;
}
.bg-orange {
  background: #FDF2E9;
}
.c-grey {
  color: grey;
}

// Logos style on footer section
.site-footer #logo-eclipse-foundation {
  height: 7rem;
  margin-left: auto;
  margin-right: auto;
}
.site-footer #logo-eclipse-iot {
  height: 6rem;
  margin-left: auto;
  margin-right: auto;
}

// Powered by on footer section
.copyright-license-text {
  font-weight: bold;
}
.site-footer #template-info {
  font-size: 0.5rem;
}
.site-footer #template-info a {
  color: rgba(0, 0, 0, 0.54);
  font-weight: bold;
}
.site-footer #template-info a:hover {
  color: #FFF;
}

// Project dashboard
#project-dashboard-table {
  white-space: nowrap;
}

// Center figures
.margin-auto, figure img {
  margin-left: auto;
  margin-right: auto;
}

// Fix color of news in homepage
.btn-links a:hover {
  color: white;
}

// Fix horizontal scroll on tables when useless
table {
  display: table;
  overflow-x: auto;
}

// Changelog table
#changelog-table {
  display: block;
  word-break: break-word;
}
#changelog-table th {
  font-size: 1rem;
}
#changelog-table th:nth-child(1),
#changelog-table td:nth-child(1) {
  text-align: center;
  font-size: 1rem;
  width: 7.5rem;
}
#changelog-table span.component {
  font-size: 1rem;
  font-weight: bold;
}
#changelog-table span.version {
  font-weight: bold;
  padding-left: 1rem;
}
#changelog-table span.version code {
  font-size: 1rem !important;
}
#changelog-table code {
  padding-top: 0;
  padding-bottom: 0;
  font-size: .8rem !important;
}
#changelog-table h3 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: .8rem;
}
#changelog-table ul {
  margin-bottom: 0;
}
#changelog-table hr {
  visibility: hidden;
  margin-top: .75rem;
  margin-bottom: 0;
  background: #ddd;
}
#changelog-table table {
  width: auto;
}
#changelog-table table th,
#changelog-table table td {
  font-size: .8rem !important;
  padding: 0;
}
#changelog-table table th:nth-child(1) {
  width: 22rem;
}
#changelog-table table th:nth-child(2) {
  width: 5rem;
}
#changelog-table table th:nth-child(3) {
  width: 5rem;
}
#changelog-table table th:nth-child(4) {
  width: 5rem;
}

// Button alignment on navbar
.navbar-light {
  line-height: 2;
}

// Fix color for odd table rows
table>tbody>tr:nth-child(odd)>td, table>tbody>tr:nth-child(odd)>th {
  background-color: #f9f9f9;
}

// Fix copy button visibility and size
.btn-copy-code {
  display: block;
  line-height: .5;
}

// Remove search form from left menu for narrow screen
@media (min-width: 768px) {
  .docs-search {
    display: none !important;
  }
  .docs-links {
    //max-height: calc(100vh - 5rem - 70px);
    max-height: calc(100vh - 4rem);
  }
}

// Add horizontal/vertical separator to all button groups
.btn-group .btn {
  margin-top: 1px !important;
  margin-left: 1px !important;
}

// Tooltip statistics
.tooltip-statistics {
  font-size: .7rem;
  position: absolute;
  display: none;
  z-index: 9999;
}

// Table header
thead {
  background-color: #DDD;
}

/* Add ↗ after all external links, except when the link contains an image or an icon */
a[href^="http"]:not([href*="//keyple.org"]):not(:has(img)):not(:has(i))::after {
  content: "\00a0↗"; /* non-breaking space + arrow ↗ */
  font-size: 0.85em;
}
/* Exceptions */
#project-dashboard-table a::after {
  content: "" !important;
}

